[gd_scene load_steps=4 format=3 uid="uid://b4sbdx84mhnmi"]

[ext_resource type="Script" path="res://card/story_card.gd" id="1_185so"]
[ext_resource type="PackedScene" uid="uid://scwnvnkr08fy" path="res://ui/character_display.tscn" id="1_cgl2b"]
[ext_resource type="Theme" uid="uid://bqnq26iud8rn3" path="res://card/theme.tres" id="2_qli37"]

[node name="StoryCard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_185so")

[node name="Control" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_qli37")

[node name="PanelContainer" type="PanelContainer" parent="Control"]
custom_minimum_size = Vector2(0, 192)
layout_mode = 2
size_flags_vertical = 0

[node name="Text" type="Label" parent="Control/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Text goes here"
horizontal_alignment = 1
autowrap_mode = 3

[node name="MainImage" type="TextureRect" parent="Control"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
expand_mode = 5

[node name="InfoContainer" type="PanelContainer" parent="Control"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/InfoContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="CharacterDisplay" parent="Control/InfoContainer/HBoxContainer" instance=ExtResource("1_cgl2b")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonArea" type="VBoxContainer" parent="Control/InfoContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 32
alignment = 1
